--- a/css/lol.css
+++ b/css/lol.css
@@ -57,6 +57,8 @@ div.intro_caster {
 
 p.intro_caster {
     font-size: 4em;
+    text-shadow: -5px 4px 2px var(--accent);
+
     display: flex;
     align-items: flex-end;
 }
@@ -128,6 +130,8 @@ div.draft_caster {
 
 p.draft_caster {
     font-size: 4em;
+    text-shadow: -5px 4px 2px var(--accent);
+
     display: flex;
     align-items: flex-end;
 }
