added text shadow for readability

--- a/css/lol.css
+++ b/css/lol.css
@@ -112,6 +112,8 @@ p.draft_player {
     width: 16vw;
     height: 6vh;
 
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+
     /* border: #818385;
     border-style: solid; */
 }
