--- a/css/lol.css
+++ b/css/lol.css
@@ -112,6 +112,8 @@ p.draft_player {
     /* width: 16vw; */
     width: auto;
     height: auto;
+    padding-left: 8px;
+    padding-right: 8px;
 
     text-shadow: -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000, 2px 2px 0 #000;
 
